docs/v0.5/reference/events.mdx
---
title: Event Schema
description: Every event type emitted by Nanny, with full field definitions.
---

## Format

All events are JSON objects emitted one per line (NDJSON). Every event has:

| Field | Type | Description |
|-------|------|-------------|
| `event` | string | Event type identifier (see below) |
| `ts` | integer | Unix timestamp in milliseconds |

---

## ExecutionStarted

Emitted immediately before the child process is spawned.
Always the first event in any log.

```json
{
  "event": "ExecutionStarted",
  "ts": 1711234567000,
  "limits_set": "[limits]",
  "command": "python agent.py",
  "limits": {
    "steps": 100,
    "tokens": 1000,
    "timeout": 30000
  }
}
```

| Field | Type | Description |
|-------|------|-------------|
| `limits_set` | string | The active limit set name. `"[limits]"` = base defaults. |
| `command` | string | The full command string as passed to `nanny run`. |
| `limits.steps` | integer | Active step limit. |
| `limits.tokens` | integer | Active token limit. |
| `limits.timeout` | integer | Active timeout in milliseconds. |

---

## ExecutionStopped

Emitted on every exit path — clean completion, limit breach, spawn failure, or internal error.
Always the last event in any log.

```json
{
  "event": "ExecutionStopped",
  "ts": 1711234572000,
  "reason": "AgentCompleted",
  "steps": 42,
  "tokens_spent": 380,
  "elapsed_ms": 4823
}
```

| Field | Type | Description |
|-------|------|-------------|
| `reason` | string | Why execution stopped. See reasons below. |
| `steps` | integer | Total steps completed. |
| `tokens_spent` | integer | Total tokens spent. |
| `elapsed_ms` | integer | Total wall-clock time in milliseconds. |

### Stop reasons

| Reason | Description |
|--------|-------------|
| `AgentCompleted` | Process exited cleanly on its own. |
| `TimeoutExpired` | Wall-clock timeout was reached. Process was killed. |
| `MaxStepsReached` | Step limit was reached. Process was killed. |
| `BudgetExhausted` | Token budget was exhausted. Process was killed. |
| `ToolDenied` | A tool call was blocked because the tool is not in the allowlist. |
| `RuleDenied` | A tool call was blocked by a custom rule or a per-tool `max_calls` limit. |
| `ManualStop` | Execution was stopped programmatically. |
| `ProcessCrashed` | The child process exited with a non-zero code unexpectedly. |
| `BridgeUnavailable` | Enforcement was active but became unreachable during rule evaluation or a tool call. Nanny fails closed — silently continuing with ungoverned execution is never allowed. |

---

## AgentScopeEntered

Emitted when a function annotated with `#[nanny::agent("name")]` is entered. Records the limits active for that scope.

```json
{
  "event": "AgentScopeEntered",
  "ts": 1711234567200,
  "name": "researcher",
  "limits": {
    "steps": 200,
    "tokens": 5000,
    "timeout": 120000
  }
}
```

| Field | Type | Description |
|-------|------|-------------|
| `name` | string | The name of the agent scope (matches `[limits.<name>]` in `nanny.toml`). |
| `limits.steps` | integer | Step limit active for this scope. |
| `limits.tokens` | integer | Token limit active for this scope. |
| `limits.timeout` | integer | Timeout active for this scope in milliseconds. |

---

## AgentScopeExited

Emitted when a function annotated with `#[nanny::agent("name")]` returns, closing the bracket opened by `AgentScopeEntered`.

```json
{
  "event": "AgentScopeExited",
  "ts": 1711234571800,
  "name": "researcher"
}
```

| Field | Type | Description |
|-------|------|-------------|
| `name` | string | The name of the agent scope. |

<Note>
  Earlier versions of this page documented `steps_used` and `tokens_used` here.
  The runtime has never emitted them. Per-scope usage is derived by reading the
  events between the matching `AgentScopeEntered` and `AgentScopeExited`, which
  is why both carry the scope name.
</Note>

---

## HarnessIdentified

Emitted once when the agentic harness running the loop is identified — auto-detected by the Python SDK from imported frameworks, or declared explicitly with `nanny::set_harness` in Rust.

Attribution only: it never affects enforcement, never carries content, and never touches the ledger. De-duplicated, so an SDK may safely re-send it on every call.

```json
{
  "event": "HarnessIdentified",
  "ts": 1711234567150,
  "name": "langgraph",
  "version": "0.3.2"
}
```

| Field | Type | Description |
|-------|------|-------------|
| `name` | string | Harness identifier, e.g. `langgraph`, `crewai`, `opencode`. |
| `version` | string | Optional. Absent when the harness reports no version. |

---

## AppIdentified

Emitted once when a process declares which app it is, read from the committed `.nanny/app.json`. Same category as `HarnessIdentified`: attribution only, de-duplicated, safe to re-send.

This is what lets one governance server — holding one API key — serve many apps and still have each attributed separately. Identity travels in the event stream rather than being derived from the credential, for the same reason OpenTelemetry makes `service.name` a resource attribute rather than a transport concern.

```json
{
  "event": "AppIdentified",
  "ts": 1711234567180,
  "app_id": "app_70c74914f3694d03a18c70dbca8fb8d8",
  "name": "gotm-nanny"
}
```

| Field | Type | Description |
|-------|------|-------------|
| `app_id` | string | Permanent identity from `nanny init`. Never regenerated. |
| `name` | string | Human-facing label, shown in the dashboard. Free to change without the app becoming a different app. |

---

## StepCompleted

Emitted after each agent step when using the Rust SDK or Python SDK.

```json
{
  "event": "StepCompleted",
  "ts": 1711234568000,
  "step": 1
}
```

| Field | Type | Description |
|-------|------|-------------|
| `step` | integer | The step number, starting from 1. |

---

## ToolAllowed

Emitted when Nanny permits a tool call to proceed.

```json
{
  "event": "ToolAllowed",
  "ts": 1711234568101,
  "tool": "http_get"
}
```

| Field | Type | Description |
|-------|------|-------------|
| `tool` | string | The name of the tool that was allowed. |

---

## ToolDenied

Emitted when Nanny blocks a tool call because the tool is not in the `[tools] allowed` list in `nanny.toml`.

```json
{
  "event": "ToolDenied",
  "ts": 1711234568101,
  "tool": "write_file"
}
```

| Field | Type | Description |
|-------|------|-------------|
| `tool` | string | The name of the tool that was blocked. |

---

## RuleDenied

Emitted when a custom rule or a per-tool `max_calls` limit blocks a tool call. The tool was on the allowlist but a rule returned a denial before the call executed.

```json
{
  "event": "RuleDenied",
  "ts": 1711234568101,
  "tool": "http_get",
  "rule_name": "no_loop"
}
```

| Field | Type | Description |
|-------|------|-------------|
| `tool` | string | The name of the tool that triggered the rule. |
| `rule_name` | string | The name of the rule that fired (e.g. `"no_loop"`) or the per-tool limit that was hit (e.g. `"http_get.max_calls"`). |

---

## ToolFailed

Emitted when a permitted tool fails at runtime. Distinct from `ToolDenied` — the tool was allowed but encountered an error (network failure, bad arguments, timeout). No tokens are charged on failure.

```json
{
  "event": "ToolFailed",
  "ts": 1711234568200,
  "tool": "http_get",
  "error": "connection refused"
}
```

| Field | Type | Description |
|-------|------|-------------|
| `tool` | string | The name of the tool that failed. |
| `error` | string | A description of the error. |

---

## LlmUsageRecorded

Emitted when LLM token usage is reported to Nanny — via the Python SDK's `instrument()` or the Rust SDK's `report_usage()`. Records the measured input and output tokens debited from the budget, plus optional model, provider, and cache-usage labels.

```json
{
  "event": "LlmUsageRecorded",
  "ts": 1711234568150,
  "input": 1200,
  "output": 340,
  "model": "gpt-4o",
  "provider": "openai",
  "cache_read": 900
}
```

| Field | Type | Description |
|-------|------|-------------|
| `input` | integer | Prompt / input tokens consumed by the LLM call. |
| `output` | integer | Completion / output tokens produced by the LLM call. |
| `model` | string | Optional. Model identifier reported by the SDK (e.g. `"gpt-4o"`). Omitted when not provided. |
| `provider` | string | Optional. Provider identifier reported by the SDK (e.g. `"openai"`). Omitted when not provided. |
| `cache_read` | integer | Optional. A finer split of `input` — never additional tokens beyond it — for providers that report prompt-cache reads (OpenAI, Anthropic, DeepSeek, Gemini). Omitted, not zero, for providers/responses that don't report cache usage. |
| `cache_write` | integer | Optional. Same as `cache_read`, but for tokens written to cache (a real, separate cost for providers like Anthropic; most providers have no write-cost concept and never set this). |

`cache_read`/`cache_write` are reporting-only, same as `model`/`provider`: enforcement always debits `input + output`, unaffected by whether either is present. They exist so a downstream cost calculator can price cache-hit tokens at their real, much cheaper rate instead of treating all input as one undifferentiated price. Every provider uses its own field name and shape for cache usage — there's no shared convention the way there is for input/output tokens — so the SDK normalizes each provider's own vocabulary into these two generic fields; see `nanny_sdk.instrument`'s module docs for the per-provider mapping.
